# activity-tracker

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  mise.toml
backend/: .env.example  README.md  pyproject.toml
backend/src/garmin_tracker/: __init__.py  auth.py  categorization.py  config.py  db.py  deps.py  main.py  models.py  schemas.py  units.py
backend/src/garmin_tracker/routers/: account.py  activities.py  auth.py  garmin.py  public.py  share.py  sync.py  weeks.py
backend/src/garmin_tracker/services/: activity_normalize.py  crypto.py  garmin_client.py  sync_service.py  week_service.py
backend/tests/: test_activity_normalize.py  test_categorization.py  test_delete_data.py  test_share.py  test_sync_range.py  test_week_bounds.py
docs/: deploy-fly.md
frontend/: .env.example  index.html  package-lock.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx
frontend/src/lib/: auth.tsx  format.ts
frontend/src/pages/: ActivityPage.tsx  ChartsPage.tsx  LoginPage.tsx  RegisterPage.tsx  ReviewPage.tsx  SettingsPage.tsx  SharedViewPage.tsx  WeekDetailPage.tsx  WeekPage.tsx
frontend/src/types/: index.ts
