[project]
name = "garmin-tracker"
version = "0.1.0"
description = "Multi-user Garmin Connect workout tracker (FastAPI)"
readme = "README.md"
authors = [
    { name = "Jeremy Schaub", email = "jschaub30@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.3",
    "bcrypt<4.1",
    "cryptography>=49.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.139.0",
    "garminconnect>=0.3.6",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "pydantic-settings>=2.14.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlmodel>=0.0.39",
    "uvicorn[standard]>=0.51.0",
]

[project.scripts]
garmin-tracker = "garmin_tracker:main"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]
